<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WhatsApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_crateGroup">Group</string>
    <string name="action_search">search</string>
    <string name="action_newGroup">New group</string>
    <string name="action_sewBroadcast">New broadcast</string>
    <string name="action_web">WhatsApp Web</string>
    <string name="action_starredMsg">Starred message</string>
    <string name="action_status">Status</string>
    <string name="title_activity_activity_status">Status</string>
    <string name="title_activity_activity_satus">Status</string>
    <string name="StatusImage">Image Status</string>
    <string name="title_activity_activity_chart">ActivityChart</string>
    <string name="View_contact">View contact</string>
    <string name="Media">Media</string>
    <string name="Search">Search</string>
    <string name="Mute">Mute</string>
    <string name="Wallpaper">Wallpaper</string>
    <string name="more">More</string>
    <string name="title_activity_activity_calls">Call info</string>
    <string name="Delete_All">Delete all</string>
    <string name="title_activity_activity_settings">Settings</string>
    <string name="remove_call">Remove from call log</string>
    <string name="Block">Block</string>
    <string name="return_chart"></string>
    <string name="title_activity_starred">starredActivity</string>
    <string name="title_activity_starred_msg">Starred messages</string>
    <string name="title_activity_activity_whats_app_web">ActivityWhatsAppWeb</string>
    




</resources>
